# deep_mtg_2

./: .dockerignore  .env.tests  .gitignore  .pre-commit-config.yaml  AGENTS.md  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fe_prompt.txt  llms.txt  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.devcontainer.yml  post-create.sh
.github/workflows/: backend_ci.yml  backend_security.yml  ci.yml  frontend_ci.yml  frontend_security.yml
app/: manage.py
app/app/: __init__.py  app_settings.py  settings.py  urls.py  utils.py
app/appai/: api.py
app/appai/constants/: __init__.py  build_statuses.py  guardrail_contexts.py  llm_models.py  models.py  prompt_gotchas.py  storage.py
app/appai/migrations/: 0001_initial.py  0002_alter_deckbuildtask_status.py  0003_remove_deckbuildtask_deck_id_deckbuildtask_deck.py  0004_alter_deckbuildtask_deck.py  0005_deckbuildtask_deck_size_deckbuildtask_n_replacements_and_more.py  0006_deckbuildtask_prompt.py  0007_memory.py
app/appai/models/: __init__.py  deck_build.py  memory.py
app/appai/modules/: __init__.py  build_rate_limit.py  construct_deck.py  dense_embedding.py  get_model.py
app/appai/routes/: build_deck.py
app/appai/serializers/: build_deck.py
app/appai/tasks/: __init__.py  cleanup.py  construct_deck.py  daily_theme.py  dense_embedding.py  test.py
app/appai/tests/: test_api_router.py  test_build_deck_routes.py  test_build_deck_serializers.py  test_build_rate_limit.py  test_construct_deck.py  test_deck_build_task_field_updates.py  test_deck_construction_graph.py  test_deck_constructor_agents.py  test_deck_theme_agent.py  test_dense_embedding.py  test_get_model.py  test_memory_model_and_tools.py  test_query_tools_theme_search.py  test_replace_card_graph.py  test_runtime_typechecks.py  test_task_cleanup.py  test_task_construct_deck.py  test_task_daily_theme.py  test_task_dense_embedding.py
app/appauth/: api.py  middleware.py
app/appauth/migrations/: 0001_initial.py  0002_refreshtoken_family_id_refreshtoken_parent_and_more.py
app/appauth/models/: __init__.py  token.py
app/appauth/modules/: auth.py  auth_rate_limit.py  google_auth.py  token.py
app/appauth/routes/: token.py
app/appauth/serializers/: token.py
app/appauth/tests/: test_api_router.py  test_auth_module.py  test_auth_rate_limit_module.py  test_google_auth_module.py  test_middleware.py  test_token_model.py  test_token_module.py  test_token_routes.py
app/appcards/: api.py
app/appcards/constants/: cards.py  decks.py  extraction.py  storage.py
app/appcards/migrations/: 0001_initial.py  0002_printing.py  0006_deck_user.py  (+9 more)
app/appsearch/: api.py
app/appuser/: api.py
docs/: deck-building.md  developer-architecture-guide.md
frontend/: .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  TESTING_E2E.md  bun.lockb  eslint.config.mjs  middleware.ts  package.json  playwright.config.ts  proxy.test.ts  proxy.ts  vitest.config.ts  vitest.setup.ts
frontend/app/: layout.test.tsx  layout.tsx  page.test.tsx  providers.test.tsx  providers.tsx
frontend/components/: legal-footer.tsx
frontend/lib/: auth.test.ts  auth.ts  avatar.test.ts  avatar.ts  backend-auth.test.ts  backend-auth.ts  utils.test.ts
frontend/types/: next-auth.d.ts
(+102 files in other folders)
